Check for duplicates in Kafka validation